--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 <body>
-	<script sec:authorize="hasRole('ROLE_SUPERUSER')">
+	<script sec:authorize="hasRole('USER')">
 		var logged = true;
 	</script>
 	<nav class="navbar navbar-default navbar-fixed-top">
@@ -57,15 +57,15 @@
 						style="display: none; padding-right: 0px; margin: 3px 0 0 0 !important;">
 						<img src="images/Speed-50.png" />
 					</p>
-					<p id="label-username" class="navbar-text navbar-right"
+					<p id="label-firstname" class="navbar-text navbar-right"
 						style="display: none; padding-right: 15px; margin-top: 18px;">
-						Signed in as <a href="#" class="navbar-link" th:text="${username}"></a>
+						Signed in as <a href="#" id="firstname" class="navbar-link" th:text="${firstname}"></a>
 					</p>
 
 					<form class="navbar-form navbar-right form-login"
 						style="margin-top: 10px;" th:action="@{/login}">
 						<div class="form-group">
-							<input id="email" name="email" type="text" placeholder="Email"
+							<input id="username" name="username" type="text" placeholder="Username"
 								class="form-control" />
 						</div>
 						<div class="form-group">
