--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -47,7 +47,7 @@
 				<div class="panel-body">
 					<form class="form-login" th:action="@{/login}" method="post">
 						<div class="form-group">
-							<input id="email" name="email" type="text" placeholder="Email"
+							<input id="username" name="username" type="text" placeholder="Username"
 								class="form-control" />
 						</div>
 						<div class="form-group">
