Updated storage scheme
First implementation of data export

--- a/src/main/resources/templates/denied.html
+++ b/src/main/resources/templates/denied.html
@@ -40,13 +40,11 @@
 	<div class="container"
 		style="text-align: center; margin-top: 70px; text-align: center;">
 		<p>
-			<img alt="" src="/images/Error-100.png" />
+			<img alt="" src="/images/Private-100.png" />
 		</p>
-		<h3>Something must have gone really wrong ... we shouldn't be
-			here!</h3>
+		<h3>You do not have access to the selected resource</h3>
 		<p style="padding-top: 20px;">
-			<a class="btn btn-default" th:href="@{/}" role="button">Take me
-				back to DAIAD</a>
+			<a class="btn btn-default" th:href="@{/}" role="button">Back to DAIAD</a>
 		</p>
 		<hr />
 		<footer>
