--- a/src/main/resources/templates/notfound.html
+++ b/src/main/resources/templates/notfound.html
@@ -40,13 +40,11 @@
 	<div class="container"
 		style="text-align: center; margin-top: 70px; text-align: center;">
 		<p>
-			<img alt="" src="/images/Error-100.png" />
+			<img alt="" src="/images/Search-100.png" />
 		</p>
-		<h3>Something must have gone really wrong ... we shouldn't be
-			here!</h3>
+		<h3>Resource was not found.</h3>
 		<p style="padding-top: 20px;">
-			<a class="btn btn-default" th:href="@{/}" role="button">Take me
-				back to DAIAD</a>
+			<a class="btn btn-default" th:href="@{/}" role="button">Back to DAIAD</a>
 		</p>
 		<hr />
 		<footer>
