Enabled secured controller methods

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 </head>
 <body>
-	<script sec:authorize="hasRole('USER')">
+	<script sec:authorize="hasRole('ROLE_USER')">
 		var logged = true;
 	</script>
 	<nav class="navbar navbar-default navbar-fixed-top">
