Added UI for exporting Amphiro data

--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -456,6 +456,6 @@
 	<script src="libs/crossfilter/crossfilter.min.js"></script>
 	<script src="libs/dc/dc.js"></script>
 
-	<script src="js/main.js"></script>
+	<script src="js/home/main.js"></script>
 </body>
 </html>
