--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -115,11 +115,11 @@
 						              checked="checked"></input>
 			             </div>
 				    </div>
-				     <div class="clearfix" id="error-panel"
+				    <div class="clearfix" id="error-panel"
                         style="padding-bottom: 25px; text-align: left; padding-left: 40px; max-width: 855px; display:none;">
 				        <div class="alert alert-danger" role="alert">
                             <span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span>
-                                <span id="error-text">Enter a valid email address</span>
+                                <span id="error-text"></span>
                             </div>
 				    </div>
                 </div>
@@ -147,7 +147,7 @@
 	<script src="libs/jquery/jquery-2.1.3.min.js"></script>
 	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
 	<script src="libs/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
-   <script src="libs/bootstrap-select/js/bootstrap-select.min.js"></script>
+    <script src="libs/bootstrap-select/js/bootstrap-select.min.js"></script>
 
 	<script src="js/admin/main.js"></script>
 </body>
