--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
 
 	<div role="page" id="page-login">
 		<div class="container"
-			style="margin: 120px auto 60px auto; width: 400px;">
+			style="margin: 120px auto 60px auto; width: 400px; min-height: 320px;">
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					<h3 class="panel-title">Sign in</h3>
@@ -47,8 +47,8 @@
 				<div class="panel-body">
 					<form class="form-login" th:action="@{/login}" method="post">
 						<div class="form-group">
-							<input id="username" name="username" type="text" placeholder="Username"
-								class="form-control" />
+							<input id="username" name="username" type="text"
+								placeholder="Username" class="form-control" />
 						</div>
 						<div class="form-group">
 							<input id="password" name="password" type="password"
@@ -59,6 +59,13 @@
 					</form>
 				</div>
 			</div>
+            <div class="clearfix" id="error-panel"
+                style="padding-bottom: 25px; text-align: left; display: none;">
+                <div class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-remove-circle"
+                        aria-hidden="true"></span> <span id="error-text"></span>
+                </div>
+            </div>
 		</div>
 		<div class="container" style="text-align: center;">
 			<hr />
@@ -70,31 +77,9 @@
 		</div>
 	</div>
 
-
-	<div class="modal fade" id="authFailedModal" tabindex="-1"
-		role="dialog" aria-labelledby="authFailedModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"
-						aria-label="Close">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<h4 class="modal-title" id="authFailedModalLabel">
-						<img alt="DAIAD" src="images/daiad-transparent.png" />
-					</h4>
-				</div>
-				<div class="modal-body">Authentication has failed. Please try
-					again.</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-				</div>
-			</div>
-		</div>
-	</div>
-
 	<script src="libs/jquery/jquery-2.1.3.min.js"></script>
 	<script src="libs/bootstrap/js/bootstrap.min.js"></script>
+
+    <script src="js/login.js"></script>
 </body>
 </html>
