--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -282,6 +282,7 @@
 						style="display: none; margin-left: 40px; margin-right: 35px;">
 						<table id="shower-history" class="table table-hover">
 							<tr>
+							    <th style="text-align: center;">Device</th>
 								<th style="text-align: center;">Date</th>
 								<th style="text-align: center;">Duration</th>
 								<th style="text-align: center;">Volume</th>
@@ -317,28 +318,7 @@
 					</div>
 					<div class="container" style="margin-top: 20px;">
 						<div class="row" style="padding-left: 25px; padding-right: 50px;">
-							<div class="col-md-2">
-								<div class="panel panel-default">
-									<div class="panel-heading">Smart Meter</div>
-									<div class="panel-body">
-										<img src="images/Electrical Sensor-50.png" />
-										<p>Reference Id</p>
-										<p>
-											<b>C11FA585461</b>
-										</p>
-									</div>
-								</div>
-
-								<div class="panel panel-default">
-									<div class="panel-heading">Mobile App</div>
-									<div class="panel-body">
-										<img src="images/Multiple Devices-50.png" />
-										<p>Device</p>
-										<p>
-											<b>Amphiro 1</b>
-										</p>
-									</div>
-								</div>
+							<div class="col-md-2" id="device-list">
 							</div>
 							<div class="col-md-10">
 								<div style="width: 100%; height: 400px;"
