--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -9,7 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="_csrf" th:content="${_csrf.token}" />
     <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-    
     <title>DAIAD</title>
 
     <link href="../assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -26,6 +25,9 @@
 	<div id="app"></div>
 	<script src="../assets/lib/jquery/jquery.min.js"></script>
 	<script src="../assets/lib/bootstrap/js/bootstrap.min.js"></script>
-	<script src="../assets/js/build/utility.js"></script>
+	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
+		src="../assets/js/build/utility/bundle.min.js"></script>
+	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
+		src="../assets/js/build/utility/bundle.js"></script>
 </body>
 </html>
