--- a/src/main/resources/public/assets/css/site.css
+++ b/src/main/resources/public/assets/css/site.css
@@ -1,56 +1,30 @@
 @CHARSET "UTF-8";
 
+/* Generic */
 body {
-    padding: 0px !important;
+	margin: 0px !important;
+	padding: 0px !important;
 }
 
+/* React BootStrap Tabs */
 .nav-tabs>li>a {
 	border-radius: 0px;
 }
 
-.nav-tabs > li > a:hover {
-  border-color: transparent;
-  border-top-color: #337ab7;
-  border-bottom-color: #ddd;
-  background: #fff;
+.nav-tabs>li>a:hover {
+	border-color: transparent;
+	border-top-color: #337ab7;
+	border-bottom-color: #ddd;
+	background: #fff;
 }
 
-.nav-tabs>li>a:focus { 
+.nav-tabs>li>a:focus {
 	outline: none;
-	border-top-color: #337ab7; 
+	border-top-color: #337ab7;
 }
 
-/* bootstrap */
-.navbar {
-	min-height: 55px;
-}
-
-/* bootstrap datepicker */
-.datepicker table tr td span.active:active, .datepicker table tr td span.active:hover:active,
-	.datepicker table tr td span.active.disabled:active, .datepicker table tr td span.active.disabled:hover:active,
-	.datepicker table tr td span.active.active, .datepicker table tr td span.active.active:hover,
-	.datepicker table tr td span.active.disabled.active, .datepicker table tr td span.active.disabled.active:hover
-	{
-	
-}
-
-.datepicker table tr td span.active:hover, .datepicker table tr td span.active:hover:hover,
-	.datepicker table tr td span.active.disabled:hover, .datepicker table tr td span.active.disabled:hover:hover,
-	.datepicker table tr td span.active:active, .datepicker table tr td span.active:hover:active,
-	.datepicker table tr td span.active.disabled:active, .datepicker table tr td span.active.disabled:hover:active,
-	.datepicker table tr td span.active.active, .datepicker table tr td span.active.active:hover,
-	.datepicker table tr td span.active.disabled.active, .datepicker table tr td span.active.disabled.active:hover,
-	.datepicker table tr td span.active.disabled, .datepicker table tr td span.active.disabled:hover,
-	.datepicker table tr td span.active.disabled.disabled, .datepicker table tr td span.active.disabled.disabled:hover,
-	.datepicker table tr td span.active[disabled], .datepicker table tr td span.active[disabled]:hover,
-	.datepicker table tr td span.active.disabled[disabled], .datepicker table tr td span.active.disabled[disabled]:hover
-	{
-	background-color: #337AB7;
-}
-
-.datepicker table tr td span.active, .datepicker table tr td span.active:hover,
-	.datepicker table tr td span.active.disabled, .datepicker table tr td span.active.disabled:hover
-	{
-	background-color: #337AB7;
-	background-image: -moz-linear-gradient(center top, #337AB7, #337AB7);
+/* React Components */
+.mixin {
+	width: 100%;
+	height: 100%;
 }
