--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -4,17 +4,20 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="_csrf" th:content="${_csrf.token}" />
-    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
-    <title>DAIAD</title>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="_csrf" th:content="${_csrf.token}" />
+<meta name="_csrf_header" th:content="${_csrf.headerName}" />
+<title>DAIAD</title>
 
-    <link href="../assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="../assets/lib/bootstrap-select/css/bootstrap-select.min.css" rel="stylesheet" />
-    <link href="../assets/css/site.css" rel="stylesheet" />
-    <script th:inline="javascript">
+<link href="../assets/lib/bootstrap/css/bootstrap.min.css"
+	rel="stylesheet" />
+<link href="../assets/lib/bootstrap-select/css/bootstrap-select.min.css"
+	rel="stylesheet" />
+<link href="../assets/lib/leaflet/leaflet.css" rel="stylesheet" />
+<link href="../assets/css/site.css" rel="stylesheet" />
+<script th:inline="javascript">
         var properties = {
        	    reload: [[${reload}]],
        	    locale: 'en'
@@ -23,10 +26,10 @@
 </head>
 <body style="overflow: hidden;">
 	<div id="app"></div>
-	<script src="../assets/lib/jquery/jquery.min.js"></script>
-	<script src="../assets/lib/bootstrap/js/bootstrap.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
 		src="../assets/js/build/utility/bundle.min.js"></script>
+	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
+		src="../assets/lib/echarts/echarts.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
 		src="../assets/js/build/utility/bundle.js"></script>
 </body>
