--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -431,3 +431,9 @@ footer{
 	width: 100%;
 	height: 100%;
 }
+
+/* Bootstrap fixes */
+
+.has-feedback label~.form-control-feedback{
+	top: 30px;
+}
