Change implementation from flux to redux
Changed implementation from flux to redux.
Added support for routing.
Updated navigation structure.

--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -11,12 +11,14 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 <title>DAIAD</title>
 
-<link href="../assets/lib/bootstrap/css/bootstrap.min.css"
+<link href="/assets/lib/bootstrap/css/bootstrap.min.css"
 	rel="stylesheet" />
-<link href="../assets/lib/bootstrap-select/css/bootstrap-select.min.css"
+<link href="/assets/lib/bootstrap-select/css/bootstrap-select.min.css"
 	rel="stylesheet" />
-<link href="../assets/lib/leaflet/leaflet.css" rel="stylesheet" />
-<link href="../assets/css/site.css" rel="stylesheet" />
+<link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet" />
+<link href="/assets/css/site.css" rel="stylesheet" />
+<link href="/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
+<link href="/assets/css/utility/utility.css" rel="stylesheet" />
 <script th:inline="javascript">
         var properties = {
        	    reload: [[${reload}]],
@@ -24,13 +26,13 @@
      	};
     </script>
 </head>
-<body style="overflow: hidden;">
-	<div id="app"></div>
+<body>
+	<div id="root"></div>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
-		src="../assets/js/build/utility/bundle.min.js"></script>
+		src="/assets/js/build/utility/bundle.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
-		src="../assets/lib/echarts/echarts.min.js"></script>
+		src="/assets/lib/echarts/echarts.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
-		src="../assets/js/build/utility/bundle.js"></script>
+		src="/assets/js/build/utility/bundle.js"></script>
 </body>
 </html>
