--- a/src/main/resources/public/assets/css/utility/utility.css
+++ b/src/main/resources/public/assets/css/utility/utility.css
@@ -1,5 +1,23 @@
 @CHARSET "UTF-8";
 
+.clearfix:after
+{
+    visibility: hidden;
+    display: block; /*font-size: 0;*/
+    content: " ";
+    clear: both;
+    height: 0;
+}
+* html .clearfix
+{
+    zoom: 1;
+}
+/* IE6 */
+*:first-child + html .clearfix
+{
+    zoom: 1;
+}
+
 .wrapper {
 	width: 100%;
 }
@@ -33,12 +51,25 @@
 	margin-top: 51px;
 }
 
+/* Select 2 wrapper */
+.Select--multi .Select-value {
+    background-color: rgba(189, 195, 199, 0.08);
+    border: 1px solid rgba(127, 140, 141, 0.24);
+    color: #333;
+}
+
+.Select--multi .Select-value-icon {
+    border-right: 1px solid rgba(127, 140, 141, 0.24);
+}
+
+/* Bread crumb */
+
 ul.breadcrumbs-list {
-    padding: 8px 15px;
-    margin-bottom: 20px;
-    list-style: none;
-    background-color: #f5f5f5;
-    border-radius: 4px;
+	padding: 8px 15px;
+	margin-bottom: 20px;
+	list-style: none;
+	background-color: #f5f5f5;
+	border-radius: 4px;
 }
 
 ul.breadcrumbs-list li {
@@ -59,6 +90,71 @@ ul.breadcrumbs-list li a.breadcrumb-active {
 /* Images */
 img.sm {
 	max-width: 16px;
+}
+
+/* Table */
+.table-action {
+	cursor: pointer;
+}
+
+/* Table profile */
+.table-profile > tbody > tr:first-child  > td {
+    border-top: 0;
+}
+
+/* Check box */
+.c-checkbox {
+	float: left;
+}
+.checkbox {
+	margin: 0;
+}
+
+.c-checkbox input {
+	opacity: 0;
+}
+
+.c-checkbox span:before, .c-radio span:before {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0;
+	text-align: center !important;
+	font-size: 12px;
+	line-height: 18px;
+	margin-top: -1px;
+}
+
+.c-checkbox span, .c-radio span {
+	position: relative;
+	display: inline-block;
+	vertical-align: top;
+	margin-left: -25px;
+	width: 18px;
+	height: 18px;
+	border-radius: 2px;
+	text-align: center;
+}
+
+.c-checkbox input[type="checkbox"]+span, .c-checkbox input[type="radio"]+span,
+	.c-radio input[type="checkbox"]+span, .c-radio input[type="radio"]+span
+	{
+	border: 1px solid #337ab7;
+}
+
+.c-checkbox input[type="checkbox"]:checked+span, .c-checkbox input[type="radio"]:checked+span,
+	.c-radio input[type="checkbox"]:checked+span, .c-radio input[type="radio"]:checked+span
+	{
+	background-color: #337ab7;
+}
+
+.c-checkbox input[type=checkbox]:checked+span:before, .c-checkbox input[type=radio]:checked+span:before,
+	.c-radio input[type=checkbox]:checked+span:before, .c-radio input[type=radio]:checked+span:before
+	{
+	color: #fff;
+	opacity: 1;
 }
 
 /* Bootstrap Grid */
@@ -133,4 +229,100 @@ img.sm {
 	color: #fff;
 	background-color: #337ab7;
 	outline: none;
+}
+
+
+.rc-input-number {
+  margin: 0;
+  padding: 0;
+  line-height: 26px;
+  font-size: 12px;
+  height: 26px;
+  display: inline-block;
+  vertical-align: middle;
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+}
+.rc-input-number-handler {
+  text-align: center;
+  line-height: 12px;
+  height: 12px;
+  overflow: hidden;
+  display: block;
+}
+.rc-input-number-handler-up-inner,
+.rc-input-number-handler-down-inner {
+  color: #666666;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
+  -webkit-user-select: none;
+}
+.rc-input-number:hover {
+  border-color: #23c0fa;
+}
+.rc-input-number:hover .rc-input-number-handler-up,
+.rc-input-number:hover .rc-input-number-handler-wrap {
+  border-color: #23c0fa;
+}
+.rc-input-number-disabled:hover {
+  border-color: #d9d9d9;
+}
+.rc-input-number-disabled:hover .rc-input-number-handler-up,
+.rc-input-number-disabled:hover .rc-input-number-handler-wrap {
+  border-color: #d9d9d9;
+}
+.rc-input-number-input-wrap {
+  overflow: hidden;
+  height: 26px;
+}
+.rc-input-number-input {
+  width: 100%;
+  text-align: center;
+  outline: 0;
+  -moz-appearance: textfield;
+  line-height: 26px;
+  height: 26px;
+  transition: all 0.3s ease;
+  color: #666666;
+  border: 0;
+  border-radius: 5px;
+  padding: 0;
+}
+.rc-input-number-handler-wrap {
+  float: right;
+  border-left: 1px solid #D9D9D9;
+  width: 20px;
+  height: 26px;
+}
+.rc-input-number-handler-up {
+  border-bottom: 1px solid #D9D9D9;
+  padding-top: 1px;
+}
+.rc-input-number-handler-up-inner:after {
+  content: '+';
+}
+.rc-input-number-handler-down-inner:after {
+  content: '-';
+}
+.rc-input-number-handler-down-disabled,
+.rc-input-number-handler-up-disabled {
+  opacity: 0.72;
+}
+.rc-input-number-handler-down-disabled:hover,
+.rc-input-number-handler-up-disabled:hover {
+  color: #999;
+  border-color: #d9d9d9;
+}
+.rc-input-number-disabled .rc-input-number-input {
+  opacity: 0.72;
+  cursor: not-allowed;
+  background-color: #f3f3f3;
+}
+.rc-input-number-disabled .rc-input-number-handler {
+  opacity: 0.72;
+}
+.rc-input-number-disabled .rc-input-number-handler:hover {
+  color: #999;
+  border-color: #d9d9d9;
 }
