--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -2,73 +2,73 @@
 
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-Regular.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-Regular.ttf");
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-Italic.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-Italic.ttf");
     font-style: italic;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-Bold.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-Bold.ttf");
     font-weight: bold;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-BoldItalic.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-BoldItalic.ttf");
     font-weight: bold;
 		font-style: italic;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-SemiBold.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-SemiBold.ttf");
     font-weight: 600;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-SemiBoldItalic.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-SemiBoldItalic.ttf");
     font-weight: 600;
 		font-style: italic;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-Light.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-Light.ttf");
     font-weight: 300;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-LightItalic.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-LightItalic.ttf");
     font-weight: 300;
 		font-style: italic;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-ExtraLight.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-ExtraLight.ttf");
     font-weight: 200;
   font-family: "SourceSansPro", Helvetica, Arial, sans-serif;
 }
 @font-face {
     font-family: "SourceSansPro";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-ExtraLightItalic.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-ExtraLightItalic.ttf");
     font-weight: 200;
 		font-style: italic;
 }
 @font-face {
     font-family: "Simplifica";
-    src: url("../artwork/fonts/SourceSansPro/SourceSansPro-Regular.ttf");
+    src: url("../fonts/SourceSansPro/SourceSansPro-Regular.ttf");
 }
 @font-face {
     font-family: "FontAwesome";
-    src: url("../artwork/fonts/FontAwesome.otf");
+    src: url("../fonts/FontAwesome.otf");
 }
 
 /* Common */
 
 /* Generic */
 body {
-  background: #fff;
-	color: #666;
+	background: #D0EAFA;
+	color: #424242;
   font-family: "SourceSansPro", Helvetica, Arial, sans-serif;
   font-size: 15px;
   line-height: 1.7;
@@ -83,16 +83,20 @@ body {
 }
 
 a {
-  color: #4183c4;
+	color: #2D3580;
+	font-weight: 500;
   text-decoration: none;
 }
 
 a:hover, a:focus {
+	cursor: pointer;
+	color: #424242;
   text-decoration: none;
 }
 
 h1, h2, h3, h4 {
   font-family: "Simplifica", Helvetica, Arial, sans-serif;
+	color: #2D3580;
   font-weight: bold;
   margin: 0 0 15px;
   padding: 0;
@@ -142,12 +146,43 @@ ul {
 	list-style: none;
 }
 
+/* Common colors */
+
+.navy {
+	color: #2D3580;
+}
+
+.azure {
+	color: #E8F5FD;
+}
+
+.dark-azure {
+	color: #D0EAFA;
+}
+
+.dark-grey {
+	color: #424242;
+}
+
+.grey {
+	color: #808285;
+}
+
+.red {
+	color: #CD4D3E;
+}
+
+.green {
+	color: #7AD3AB;
+}
+
+
 /* Header */
 
 header{
 	padding: 20px 0 0 0;
 	width: 100%;
-	border-bottom: 1px #666 solid;
+	border-bottom: 1px #2D3580 solid;
 }
 
 .navigation ul{
@@ -157,6 +192,10 @@ header{
 .navbar{
 	float: left;
 }
+.site-header {
+	background: #D0EAFA;
+}
+
 .site-header .logo{
 	float: left;
 	margin-top: -10px;
@@ -164,7 +203,7 @@ header{
 
 .site-header .logo img{
 	width: 125px;
-	margin-bottom: -22px;
+	margin-bottom: -29px;
 }
 
 .site-header .main-menu{
@@ -191,7 +230,7 @@ header{
 }
 
 .main-menu .menu-item.selected{
-	color: red;
+	color: #CD4D3E;
 }
 
 .main-menu .menu-icon{
@@ -214,28 +253,26 @@ header{
 
 .site-header .notification-item{
 	display: table-cell;
+	//display: inline-block;
 	vertical-align: middle;
 	width: 40px;
-
+	height: 40px;
 }
+.site-header .notification-item:hover{
+	cursor: pointer;
+}
+
 .header-right{
 	float: right;
 }
 .header-left{
 	float:left;
 }
-.notification-item:hover{
-	cursor: pointer;
-}
-.notifications img{
-	width: 26px;
-	height: 26px;
-}
 
 .settings img{
-	width: 38px;
-	height: 38px;
+	margin-top: -4px;
 }
+
 .site-header .user-menu{
 	float: left;
 	margin-left: 10px;
@@ -246,13 +283,21 @@ header{
 	margin-left: 10px;
 	margin-top: -5px;
 }
-.login-out { 
+.site-header .language-switcher #language-switcher {
+	background: #D0EAFA;
+	border: none;
+}
+
+.form-login { 
 	max-width: 160px;
 	margin-top: -5px;
 }
-.site-header .login-out{
+.site-header .logout{
 	float: left;
-	margin-left: 10px;
+	margin-left: 7px;
+}
+
+#notifications-popover .popover-title{
 }
 #notifications-popover .popover-content{
 	width:  220px;
@@ -303,14 +348,14 @@ header{
 .notification-list ul li a:hover{
 	color: #fff;
 }
+
 .hasUnread{
 	position: absolute;
 	display: block;
-	font-size: 22px;
+	font-size: 16px;
 	font-weight: bold;
-	margin-top: -15px;
-	margin-left: 20px;
-	color: red;
+	margin-top: -10px;
+	margin-left: 17px;
 }
 .unread:before{
 	font-size: 20px;
@@ -322,6 +367,13 @@ header{
 	margin-right: 10px;
 }
 
+.deviceCount{
+	position: absolute;
+	top: 20px;
+	margin-left: 13px;
+	display: block;
+	font-size: 16px;
+}
 /* Content */
 
 /* Sections */
@@ -331,10 +383,12 @@ header{
 	width: 700px;
 }
 .main-section{
+	background: #fff;
 	min-height: 400px;
-	padding: 25px;
+	padding: 0 25px;
 }
-section[class^="section-"]{
+div[class^="section."]{
+	padding: 25px 0;
 }
 
 .primary{
@@ -349,15 +403,16 @@ section[class^="section-"]{
 	margin: 50px 0;
 	float: left;
 	padding-right: 0;
-	border-right: 1px #666 solid;
+	border-right: 1px #2D3580 solid;
 }
 
 .top-bar{
+	background: #E8F5FD;
 	display: block;
 	height: 30px;
 	width: 100%;
-	padding-left: 132px;
-	border-bottom: 1px #666 solid;
+	padding: 5px 0;
+	border-bottom: 1px #2D3580 solid;
 }
 
 .top-bar ul{
@@ -397,10 +452,11 @@ section[class^="section-"]{
 /* Footer */
 
 footer{
+	background: #D0EAFA;
 	height: 200px;
 	width: 100%;
 	padding-top: 10px;
-	border-top: 1px #666 solid;
+	border-top: 1px #2D3580 solid;
 }
 
 /* Charts */
@@ -426,6 +482,11 @@ footer{
 	border-top-color: #337ab7;
 }
 
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+	background-color: #2D3580;
+	outline: none;
+}
+
 /* React Components */
 .mixin {
 	width: 100%;
@@ -436,4 +497,40 @@ footer{
 
 .has-feedback label~.form-control-feedback{
 	top: 30px;
+}
+
+/* Section specific */
+
+/* History */
+
+.sessions-list {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0;
+	width: 80%;
+	list-style: none;
+	color: #424242;
+	border-top: 1px #2D3580 solid;
+	border-left: 1px #2D3580 solid;
+	border-right: 1px #2D3580 solid;
+}
+
+.session-item {
+	padding: 10px;
+	border-bottom: 1px #2D3580 solid;
+}
+
+.session-item:hover, .session-item:focus {
+	background: #eee;
+}
+
+.session-item-header {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+
+.session-item-details {
+	font-size: 1.0em;
+	font-weight: bold;
 }
