--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -18,6 +18,7 @@
 <link href="/assets/lib/react-select/react-select.css" rel="stylesheet" />
 <link href="/assets/lib/react-bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet" />
 <link href="/assets/lib/react-bootstrap-datetimepicker/bootstrap-datetimepicker.css" rel="stylesheet" />
+<link href="/assets/lib/react-grid-layout/styles.css" rel="stylesheet" />
 <link href="/assets/css/site.css" rel="stylesheet" />
 <link href="/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 <link href="/assets/css/utility/utility.css" rel="stylesheet" />
@@ -31,9 +32,7 @@
 <body>
 	<div id="root">
             <div style='position: absolute; left: 50%; top: 50%; margin-left: -50px; margin-top: -70px;'>
-                <img alt='' src='/assets/images/daiad-transparent.png' />
-                <br />
-                <i class="fa fa-refresh fa-2x fa-spin" style='color : #2980b9; position: relative; left: 38px'></i>
+                <img alt='' src='/assets/images/daiad-logo.svg' style='margin-top: 15px' />
             </div>
 	</div>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
