--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -14,6 +14,7 @@
 
     <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet" />
+		<link href="/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/assets/css/home.css" rel="stylesheet" />
 		
 		<script th:inline="javascript">
@@ -25,7 +26,9 @@
 
 </head>
 <body>
+  
 	<div id="app"></div>
+
 	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
 		src="/assets/js/build/home/bundle.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
