home: preloader improvements

--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -181,17 +181,31 @@ ul {
 .preloader {
 	display: block;
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 100px;
-	height: 100px;
+	top: 35vh;
+	left: 50vw;
+	width: 80px;
+	height: 80px;
   z-index: 100;
-	animation: spin 1s linear infinite;
+	animation: counter-spin 0.8s linear infinite;
 }
 
+.preloader-inner {
+	display: block;
+	position: absolute;
+	top: 35vh;
+	left: 50vw;
+	width: 80px;
+	height: 80px;
+  z-index: 100;
+	animation: spin 0.8s linear infinite;
+}
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+@-moz-keyframes counter-spin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes counter-spin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes counter-spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
 
 /* Common colors */
 
@@ -233,7 +247,7 @@ ul {
 header{
 	padding: 10px 0 0 0;
 	width: 100%;
-	border-bottom: 1px #2D3580 solid;
+	//border-bottom: 1px #2D3580 solid;
 }
 
 .navigation ul{
@@ -452,9 +466,11 @@ div[class^="section."]{
 
 .sidebar{
 	display:block;
+  min-height: 400px;
 	width: 15%;
 	margin: 25px 0;
 	float: left;
+  border-right: 1px #ddd solid;
 	padding-right: 0;
 }
 
@@ -464,7 +480,7 @@ div[class^="section."]{
 	height: 40px;
 	width: 100%;
 	padding: 7px 0;
-	border-bottom: 1px #2D3580 solid;
+	//border-bottom: 1px #2D3580 solid;
 }
 
 .top-bar ul{
@@ -559,6 +575,18 @@ footer a{
 .has-feedback label~.form-control-feedback{
 	top: 30px;
 }
+/*
+.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
+  background-color: transparent;
+  border: 1px #ddd solid;
+  color: inherit;
+}
+.nav-pills>li.active>a{
+  background-image: url("/assets/images/svg/arrow-big-right.svg");
+  background-repeat: no-repeat;
+  background-position: right;
+}
+*/
 
 /* React Components */
 .mixin {
