Implement default application modes
Implemented default application modes for users in white list.
Fixed image links for utility application.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
             <div>
                 <div class="navbar-header" style="margin-top: -15px;">
                     <a class="navbar-brand" href="#"><img alt="DAIAD"
-                        src="assets/images/daiad-transparent.png" /></a>
+                        src="assets/images/utility/daiad-logo.svg" /></a>
                 </div>
             </div>
         </div>
@@ -55,7 +55,7 @@
                     <h2>@Home</h2>
 
                     <p>
-                        <img alt="" src="assets/images/Plumbing-100.png" />
+                        <img alt="" src="assets/images/utility/Plumbing-100.png" />
                     </p>
                     <p>
                         <a class="btn btn-default" th:href="@{/home/}"
@@ -65,7 +65,7 @@
                 <div class="col-md-4">
                     <h2 style="opacity: 0.5;">@Commons</h2>
                     <p>
-                        <img alt="" src="assets/images/Collaboration-100.png" style="opacity: 0.5;" />
+                        <img alt="" src="assets/images/utility/Collaboration-100.png" style="opacity: 0.5;" />
                     </p>
                     <p>
                         <a class="btn btn-default disabled" href="#"
@@ -75,7 +75,7 @@
                 <div class="col-md-4">
                     <h2>@Utility</h2>
                     <p>
-                        <img alt="" src="assets/images/Area Chart-100.png" />
+                        <img alt="" src="assets/images/utility/Area Chart-100.png" />
                     </p>
                     <p>
                         <a class="btn btn-default" th:href="@{/utility/}"
