--- a/src/main/resources/public/assets/css/utility/utility.css
+++ b/src/main/resources/public/assets/css/utility/utility.css
@@ -198,6 +198,37 @@ a .disabled{
 	color: #999999;
 }
 
+/* Custom Spinner*/
+
+.preloader {
+	display: block;
+	position: absolute;
+	top: 35vh;
+	left: 50vw;
+	width: 80px;
+	height: 80px;
+  z-index: 100;
+	animation: counter-spin 0.8s linear infinite;
+}
+
+.preloader-inner {
+	display: block;
+	position: absolute;
+	top: 35vh;
+	left: 50vw;
+	width: 80px;
+	height: 80px;
+  z-index: 100;
+	animation: spin 0.8s linear infinite;
+}
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+@-moz-keyframes counter-spin { 100% { -moz-transform: rotate(-360deg); } }
+@-webkit-keyframes counter-spin { 100% { -webkit-transform: rotate(-360deg); } }
+@keyframes counter-spin { 100% { -webkit-transform: rotate(-360deg); transform:rotate(-360deg); } }
+
 /* Bootstrap Grid */
 
 /* Bootstrap circle button */
