Initial implementation of trial status reports
Fixed several typos.
Smart Water Meter registration is allowed only for administrators.
Updated default configuration files.
Added utility unique id property to authenticated user class. The property value is set during the user authentication process.
Created new methods in user repository for accessing account white list entries.
Added profile save/load support for DAIAD@home (web) and DAIAD@utility applications.
Added new field registered_on to table device.
Added new field last_upload_success_on to table device.
Added new field last_upload_failure_on to table device.
Create new view trial_account_activity.
Implemented DAIAD@utility section for monitoring trial user’s activity such as sign up, sign in, device registration, data uploading etc.

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      lang="en">
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+	lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    
-    <title>DAIAD</title>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<title>DAIAD</title>
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<link href="/assets/lib/bootstrap/css/bootstrap.min.css"
+	rel="stylesheet" />
+
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -22,7 +23,8 @@
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
-			<div class="navbar-header" style="margin-top: -15px;">
+			<div class="navbar-header"
+				style="margin-top: -15px; margin-top: 0px;">
 				<button type="button" class="navbar-toggle collapsed"
 					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
 					aria-controls="navbar">
@@ -31,7 +33,7 @@
 						class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#"><img alt="DAIAD"
-					src="../../assets/images/daiad-transparent.png" /></a>
+					src="../../assets/images/shared/daiad-logo.svg" /></a>
 			</div>
 		</div>
 	</nav>
@@ -39,7 +41,7 @@
 	<div class="container"
 		style="text-align: center; margin-top: 70px; text-align: center;">
 		<p>
-			<img alt="" src="../../assets/images/Error-100.png" />
+			<img alt="" src="../../assets/images/shared/Error-100.png" />
 		</p>
 		<h3>Something must have gone really wrong ... we shouldn't be
 			here!</h3>
