home: improved support for charting multiple devices in history and separated session container

--- a/src/main/resources/templates/home/default.html
+++ b/src/main/resources/templates/home/default.html
@@ -13,6 +13,7 @@
     <title>DAIAD</title>
 
     <link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/assets/lib/react-select/react-select.css" rel="stylesheet" />
 		<link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet" />
 		<link href="/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/assets/css/home.css" rel="stylesheet" />
