--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -599,16 +599,51 @@ footer a{
 
 /* Dashboard */
 
-.info-box {
+.infobox {
+  display: flex;
+  flex-direction: column;
+  font-size: 0.9em;
   border: 1px #2D3580 solid;
   overflow: hidden;
-  margin: 5px;
-  padding: 10px;
   width: 100%;
   height: 100%;
 }
+.infobox-header {
+  flex-grow: 0;
+  padding: 2px 0 2px 0;
+  min-height: 37px;
+  border-bottom: 1px #2D3580 solid;
+}
+.infobox-header span, .infobox-header div, .infobox-header a {
+  display: inline-block;
+}
 
+.infobox-body {
+  flex-grow: 1;
+  padding: 10px;
+}
+
+.infobox-footer {
+  flex-grow: 0;
+  text-align: center;
+  padding: 5px;
+  min-height: 37px;
+  border-top: 1px #2D3580 solid;
+}
+.infobox-x {
+
+}
 /* History */
+
+.time-navigator {
+  text-align: center;
+  width: 100%;
+}
+
+.time-navigator-child{
+  display: inline-block;
+  margin: 0; 
+}
 
 .sessions-list {
 	display: block;
