--- a/src/main/resources/public/assets/css/home.css
+++ b/src/main/resources/public/assets/css/home.css
@@ -75,11 +75,10 @@
     font-weight: 600;
 		font-style: normal;
 }
-
 @font-face {
     font-family: "Simplifica";
     src: url("../fonts/Simplifica.ttf");
-    font-weight: bold;
+    font-weight: normal;
     font-style: normal;
 }
 
@@ -160,6 +159,7 @@ button, .btn {
   color: #FFF;
   border: 1px #2D3580 solid;
   border-radius: 0;
+  font-size: 0.9em;
 
 }
 
@@ -173,7 +173,8 @@ input[type="text"], input[type="password"], input[type="email"] {
   text-align: center;
   border: 1px #2D3580 solid;
   border-radius: 0;
-  padding: 10px 20px;
+  font-size: 1em;
+  //padding: 10px 20px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -396,17 +397,20 @@ div[class^="section."]{
 	cursor: pointer;
 }
 
-.header-right{
+.top-header-right{
   position: absolute;
   right: 20px;
-  top: 7px;
+  top: 8px;
 }
-.header-right div, .header-right a {
-  margin-left: 7px;
+.top-header-right > div, .top-header-right > a {
+  margin-left: 20px;
 }
 
+.header-right{
+  float: right;
+}
 .header-left{
-	float:left;
+	float: left;
 }
 
 .settings img{
@@ -425,11 +429,14 @@ div[class^="section."]{
 	background: #D0EAFA;
   color: #2D3580;
 	border: none;
+  box-shadow: none;
+}
+.site-header .language-switcher .open > #language-switcher {
+  background: #fff;
 }
 
 .site-header .logout{
 	float: left;
-	margin-left: 10px;
 }
 
 #notifications-popover { 
@@ -505,7 +512,7 @@ div[class^="section."]{
 	font-size: 16px;
 	font-weight: bold;
 	margin-top: -6px;
-	margin-left: 23px;
+	margin-left: 15px;
 }
 
 .unread a:before{
@@ -659,22 +666,51 @@ div[class^="section."]{
   padding: 7px 20px;
   border-top: 1px #424242 solid;
 }
+
+.dropdown-menu{ 
+  margin: 0;
+  border: 0;
+  border-radius: 0;
+  font-size: initial;
+}
+
 .has-feedback label~.form-control-feedback{
 	top: 30px;
 }
-/*
-.nav-pills>li.active>a, .nav-pills>li.active>a:focus, .nav-pills>li.active>a:hover {
-  background-color: transparent;
-  border: 1px #ddd solid;
-  color: inherit;
-}
-.nav-pills>li.active>a{
-  background-image: url("/assets/images/svg/arrow-big-right.svg");
-  background-repeat: no-repeat;
-  background-position: right;
-}
-*/
 
+/* Override react-datetime styles */
+
+.rdt > input {
+  cursor: pointer;
+}
+
+.rdtPicker thead button {
+  height: initial;
+}
+
+.rdtPicker button {
+  border: initial;
+  color: #424242;
+}
+.rdtPicker button:hover, .rdtPicker button:focus {
+  background: #eeeeee;
+}
+.rdtPicker .rdtDay:hover { 
+  cursor: pointer;
+  background: #eeeeee;
+}
+.rdtPicker td.rdtActive, .rdtPicker td.rdtActive:hover {
+  background-color: #2D3580;
+}
+
+.rdtCounter .rdtBtn, .rdtCounter .rdtCount {
+  height: initial;
+  line-height: initial;
+}
+.rdtPicker .rdtTimeToggle {
+  padding-top: 5px;
+  font-weight: bold;
+}
 /* React Components */
 .mixin {
 	width: 100%;
@@ -699,11 +735,13 @@ div[class^="section.login"]{
 }
 .form-login { 
 	max-width: 200px;
-  margin: 0 auto;
+  margin: 20px auto;
 }
 .form-login button {
+  margin-top: 10px;
   width: 100%;
 }
+
 .form-login-container .login-errors {
   min-height: 28px;
   margin: 40px auto;
@@ -713,11 +751,14 @@ div[class^="section.login"]{
 }
 /* Dashboard */
 
+.say-hello {
+  
+}
+
 .infobox {
   display: flex;
   flex-direction: column;
   background: #FFF;
-  font-size: 0.9em;
   border: 1px #2D3580 solid;
   overflow: hidden;
   width: 100%;
@@ -725,19 +766,30 @@ div[class^="section.login"]{
 }
 .infobox-header {
   flex-grow: 0;
-  padding: 2px 0 2px 0;
+  padding: 5px;
   min-height: 37px;
   border-bottom: 1px #2D3580 solid;
 }
+.infobox-header h4 {
+  margin: 0;
+}
 .infobox-header span, .infobox-header div, .infobox-header a {
   display: inline-block;
+  font-size: 0.95em;
+  margin: 0;
 }
 
 .infobox-body {
   flex-grow: 1;
-  padding: 10px;
+  flex-shrink: 1;
+  padding: 10px 20px;
 }
-
+.infobox-body span {
+  font-size: 1.02em;
+}
+.infobox-body p {
+  margin: 0;
+}
 .infobox-footer {
   flex-grow: 0;
   text-align: center;
@@ -746,7 +798,14 @@ div[class^="section.login"]{
   border-top: 1px #2D3580 solid;
 }
 .infobox-x {
-
+  font-weight: normal;
+  color: lightgrey;
+}
+.infobox-x:hover {
+  color: lightgrey;
+}
+.infobox-error {
+  font-size: 1.1em;
 }
 /* History */
 
@@ -778,7 +837,21 @@ div[class^="section.login"]{
 .history-list-area {
   margin: 20px 0;
 }
-
+.history-list-header {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: 10px;
+  border-bottom: 1px #424242 solid;
+}
+.sort-options .dropdown-toggle { 
+  background: none;
+  color: #424242;
+  margin-top: -5px;
+  font-size: 1.1em;
+}
+.sort-options .dropdown-menu {
+  font-size: 1.1em;
+}
 .sessions-list {
 	display: block;
 	padding: 0;
@@ -801,15 +874,18 @@ div[class^="section.login"]{
 .session-item:hover, .session-item:focus {
 	background: #fff;
 }
-.session-item>a{
-  display: block;
-  width: 100%;
-  height: 100%;
-  color: #424242;
-	padding: 10px;
-}
 
+.session-item-highlight {
+  color: #424242;
+  overflow: hidden;  
+  font-weight: normal;
+}
+.session-item-highlight>li {
+	font-size: 1.1em;
+}
 .session-item-details {
+  line-height: 3.5em;
+  color: #424242;
   overflow: hidden;  
   list-style: none;
   font-weight: normal;
@@ -818,7 +894,6 @@ div[class^="section.login"]{
   margin-left: 20px;
   display: inline-block;
 	font-size: 1.1em;
-  line-height: 2.4em;
 }
 
 .session-item-details:first-child{
