--- a/src/main/resources/templates/utility/default.html
+++ b/src/main/resources/templates/utility/default.html
@@ -3,6 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	lang="en">
+
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,8 +12,7 @@
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
 <title>DAIAD</title>
 
-<link href="/assets/lib/bootstrap/css/bootstrap.min.css"
-	rel="stylesheet" />
+<link href="/assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="/assets/lib/leaflet/leaflet.css" rel="stylesheet" />
 <link href="/assets/lib/leaflet-draw/leaflet.draw.css" rel="stylesheet" />
 <link href="/assets/lib/react-select/react-select.css" rel="stylesheet" />
@@ -22,20 +22,29 @@
 <link href="/assets/css/site.css" rel="stylesheet" />
 <link href="/assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
 <link href="/assets/css/utility/utility.css" rel="stylesheet" />
+
+<!-- custom builds for vendor libraries -->
+<script src="/assets/js/build/vendor/util.js"></script>
+<script src="/assets/js/build/vendor/jquery.js"></script>
+<script src="/assets/js/build/vendor/react.js"></script>
+<script src="/assets/js/build/vendor/leaflet.js"></script>
+
 <script th:inline="javascript">
-        var properties = {
-       	    reload: [[${reload}]],
-       	    locale: 'en'
-     	};
-    </script>
+    var properties = {
+        reload: [[${reload}]],
+       	locale: 'en'
+    };
+</script>
 </head>
+
 <body>
 	<div id="root">
-            <div style='position: absolute; left: 50%; top: 50%; margin-left: -50px; margin-top: -70px;'>
-                <img alt='' src='/assets/images/shared/daiad-logo.svg' style='margin-top: 15px' />
-            </div>
+        <div style='position: absolute; left: 50%; top: 50%; margin-left: -50px; margin-top: -70px;'>
+            <img alt='' src='/assets/images/shared/daiad-logo.svg' style='margin-top: 15px' />
+        </div>
 	</div>
-	<script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
+	
+    <script th:if="${@environment.getActiveProfiles()[0] == 'production'}"
 		src="/assets/js/build/utility/bundle.min.js"></script>
 	<script th:if="${@environment.getActiveProfiles()[0] == 'development'}"
 		src="/assets/lib/echarts/echarts.min.js"></script>
